# CameraImageAcquisition

./: .gitignore  CMakeLists.txt  Configuration Cevelop.odt  README.md
config/: 40008603.pfs  40009302.pfs  genparam.cfg  genparam.cfg.outdoor
src/: Cameras.cpp  Cameras.hpp  Core.cpp  EquiToPinhole.cpp  EquiToPinhole.hpp  Images.cpp  Images.hpp  ImagesCV.cpp  ImagesCV.hpp  ImagesRaw.cpp  ImagesRaw.hpp  PairImages.cpp  PairImages.hpp  PairImagesRaw.cpp  PairImagesRaw.hpp  Queue.hpp
